fixed overflow property

--- a/sass/pages/home/_education.scss
+++ b/sass/pages/home/_education.scss
@@ -22,7 +22,7 @@
     display: flex;
     justify-content: start;
     gap: 10px;
-    overflow-y: auto;
+    overflow-x: auto;
 
     -webkit-overflow-scrolling: touch;
     font-size: $font-size-xxxs;
