--- a/sass/pages/home/_reels.scss
+++ b/sass/pages/home/_reels.scss
@@ -15,7 +15,7 @@
     display: flex;
     gap: 10px;
     justify-content: start;
-    overflow-y: auto;
+    overflow-x: auto;
 
     -webkit-overflow-scrolling: touch;
     font-size: $font-size-xxs;
